# barrel

./: .clang-format  .gitignore  BarrelParser.cpp  BarrelParser.h  CMakeLists.txt  README.md  barrel_en_US.ts  example.barrel  format.sh  instructions.txt  main.cpp  spec.md
examples/: README.md  fibonacci-explanation.txt
examples/diagonal-alphabet/: diagonal-alphabet.barrel  diagonal-alphabet.md
examples/fibonacci/: fibonacci.barrel  fibonacci.md
src/: BarrelParser.cpp  BarrelParser.h
src/instructions/: AccumulatorAccessor.cpp  AccumulatorAccessor.h  BarrelString.cpp  BarrelString.h  BitShift.cpp  BitShift.h  ContinueStatement.cpp  ContinueStatement.h  DecrementAccumulator.cpp  DecrementAccumulator.h  DivideStatement.cpp  DivideStatement.h  EqualTo.cpp  EqualTo.h  EqualityOperation.cpp  EqualityOperation.h  ExitStatement.cpp  ExitStatement.h  FuzzyEqualTo.cpp  FuzzyEqualTo.h  FuzzyNotEqualTo.cpp  FuzzyNotEqualTo.h  GreaterThan.cpp  GreaterThan.h  GreaterThanEqualTo.cpp  GreaterThanEqualTo.h  IfElse.cpp  IfElse.h  IncrementAccumulator.cpp  IncrementAccumulator.h  Infinity.cpp  Infinity.h  InputStatement.cpp  InputStatement.h  InstructionChain.cpp  InstructionChain.h  InstructionNode.cpp  InstructionNode.h  Instructions.h  JumpStatement.cpp  (+47 more)
